@@ -1,3 +1,6 @@
+[B]2.0.15[/B]
+- Fixed: Use first aired episode date when firstAired field is missing (thx to Smeulf)
+
 [B]2.0.14[/B]
 - Fixed: Use the year in the title as fallback when no firstAired field, to reduce mismatches
 
